--- a/Clint/package.json
+++ b/Clint/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
